force-app/main/default/objects/EmailMessage/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <formula>IF(FromAddress== $Label.RS_EmailToCase,&apos;Outbound&apos;,&apos;Inbound&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CallType</label>
    <type>Text</type>
</CustomField>