force-app/main/default/objects/EmailMessage/fields/Email_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Name__c</fullName>
    <displayFormat>Email-{00}</displayFormat>
    <label>Email Name</label>
    <type>AutoNumber</type>
</CustomField>