force-app/main/default/objects/EmailMessage/fields/RS_Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>RS_Case_Owner_Name__c</fullName>
    <formula>Parent.Owner:User.FirstName +&apos; &apos;+ Parent.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>