force-app/main/default/objects/EmailMessage/fields/RS_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>RS_ID_Link__c</fullName>
    <formula>&quot;/&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RS ID Link</label>
    <type>Text</type>
</CustomField>