force-app/main/default/objects/EmailMessage/fields/RS_ObjectFormula__c.field-meta.xml
<CustomField>
    <fullName>RS_ObjectFormula__c</fullName>
    <formula>&quot;/&quot;+Parent.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ObjectFormula</label>
    <type>Text</type>
</CustomField>